# mi-gcg

./: .gitignore  README.md  pyproject.toml  ruff.toml
migcg/: __init__.py  gcg.py  migcg.py  refusal_demo.py  utils.py
notebooks/: migcg.ipynb  nanogcg.ipynb  plots.ipynb  refusal_demo.ipynb
